--- a/coc-settings.json
+++ b/coc-settings.json
@@ -6,14 +6,17 @@
     "typescript",
     "typescriptreact",
     "json",
-    "javascriptreact"
+    "javascriptreact",
+    "lua",
+    "python"
   ],
-  "diagnostic.errorSign": "•",
-  "diagnostic.warningSign": "•",
-  "diagnostic.infoSign": "•",
+  "diagnostic.errorSign": "",
+  "diagnostic.warningSign": "",
+  "diagnostic.infoSign": "",
   "coc.source.OmniSharp.enable": true,
-  "coc.source.OmniSharp.triggerCharacters": ".",
+  "coc.source.OmniSharp.filetypes": ["cs"],
   "omnisharp.version": "v1.37.3",
   "omnisharp.trace.server": "information",
-  "omnisharp.debug.server": true
+  "omnisharp.debug.server": true,
+  "Lua.diagnostics.globals": ["vim"]
 }
