disabled js warning in node

--- a/coc-settings.json
+++ b/coc-settings.json
@@ -21,5 +21,6 @@
   "omnisharp.version": "v1.37.3",
   "omnisharp.trace.server": "information",
   "omnisharp.debug.server": true,
-  "Lua.diagnostics.globals": ["vim", "use"]
+  "Lua.diagnostics.globals": ["vim", "use"],
+  "javascript.suggestionActions.enabled": false
 }
